--- a/_config.yml
+++ b/_config.yml
@@ -12,11 +12,11 @@ baseurl: ""                             # for example, '/blog' if your blog host
 
 # SNS settings
 RSS: false
-weibo_username:     zgzhangkun
-zhihu_username:     zgzhangkun
-github_username:    zgzhangkun
+#weibo_username:     zgzhangkun
+#zhihu_username:     zgzhangkun
+#github_username:    zgzhangkun
 #twitter_username:  zgzhangkun
-facebook_username:  zgzhangkun
+#facebook_username:  zgzhangkun
 # linkedin_username:  firstname-lastname-idxxxx
 
 
@@ -51,9 +51,9 @@ kramdown:
 #disqus_username: _your_disqus_short_name_
 
 # Duoshuo settings
-duoshuo_username: huxblog
+#duoshuo_username: huxblog
 # Share component is depend on Comment so we can NOT use share only.
-duoshuo_share: true                     # set to false if you want to use Comment without Sharing
+#duoshuo_share: true                     # set to false if you want to use Comment without Sharing
 
 
 
@@ -63,7 +63,7 @@ duoshuo_share: true                     # set to false if you want to use Commen
 ba_track_id: 4cc1f2d8f3067386cc5cdb626a202900
 # Google Analytics
 ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
-ga_domain: huangxuan.me
+#ga_domain: huangxuan.me
 
 
 
