--- a/_config.yml
+++ b/_config.yml
@@ -81,9 +81,9 @@ featured-condition-size: 1              # A tag will be featured if the size of 
 
 
 # Friends
-friends: [
+Links: [
     {
-        title: "Su",
+        title: "GitHub",
         href: "http://su.gallery/"
     }
 ]
